versioned_docs/version-1.0/manual-de-usuario.md
---
sidebar-position: 3
---

# Manual de Usuario

**Número de jugadores:** `1` jugador

**Duración aproximada del juego:** `5-10` minutos

**Edad mínima recomendada:** `6` años

**Tipo:** Juego de computadora

**Género:** Indie

## Introducción

_Stray Cat_ es un juego para dispositivo web enfocado a fomentar el cuidado animal con cortas preguntas y 2 opciones de respuesta. Se juega de manera individual hasta perder o completar todas las preguntas.

El personaje de nuestra aventura se llama Cat un gatito callejero que tiene como objetivo llegar a un hogar, sin embargo el camino para Cat no es nada fácil, a continuacion describe a más detalle cada obstaculo y elementos que se encuentran en este videjugo.

## Elementos del juego

### Pantalla de inicio

![](/img/pantalla-inicio.png)

En la pantalla de inicio se muestra el nombre del juego, el logo, un botón para iniciar el juego y otro para ver las reglas.

### Elementos de interacción
// Tabla izquierda imagen, derecha texto

| Imagen | **Elementos de interacción** |
| --- | --- |
| <div align="center"> ![](/img/gat.png)</div> | El es el personaje principal del juego, el cual se mueve por la pantalla. Va a huir de los obstáculos. |
| <div align="center"> ![](/img/DogRun.png) </div> | El es el villano del juego, debes evitar encontrarlo durante el camino. |
| <div align="center"> ![](/img/pilaCaja.png) </div> | Se muestra el resultado obtenido luego del proceso de ideacion, desarrollo y testing de la idea inicial A continuacion el manual final y los ultimos cambios. |
| <div align="center"> ![](/img/pared.png) </div> | Representa el camino de cat, en ciertos puentos el camino desaparece recuerda saltar para no morir. |

## Controles

| **Controles** | **Descripción** |
| --- | --- |
| Barra espaciadora [SPACE] | Salta |