versioned_docs/version-2.0/manual-de-usuario.md
---
sidebar-position: 3
---

# Manual de Usuario

**Número de jugadores:** `1` jugador

**Duración aproximada del juego:** `5-10` minutos

**Edad mínima recomendada:** `6` años

**Tipo:** Juego de computadora

**Género:** Indie

## Introducción

_Stray Cat_ es un juego para dispositivo web enfocado a fomentar el cuidado animal con cortas preguntas y 2 opciones de respuesta. Se juega de manera individual hasta perder o completar todas las preguntas.

El personaje de nuestra aventura se llama Cat un gatito callejero que tiene como objetivo llegar a un hogar, sin embargo el camino para Cat no es nada fácil, a continuacion describe a más detalle cada obstaculo y elementos que se encuentran en este videjugo.

## Instrucciones:

Para jugar deber dar click en la opción `iniciar` en el menú. En este menú también se incluye una opción con las reglas del juego. 

El objetivo del juego es correr por el mapa mientras se van respondiendo preguntas que van relacionadas al cuidado animal o algunas de conocimiento general. Para esto se debe de evitar los obstáculos que hay alrededor del mapa como huecos en el mapa o perros. 

Si deseas bajar rápido, usa el botón de `abajo`   
Al avanzar el camino del juego aparecerán los bloques de preguntas. Al tomarlo el gatito dejará de correr por 115 segundos donde se presentará un cuadro con la pregunta y dos opciones que señalan los caminos que se pueden tomar. 

## Comandos

| **Controles** | **Descripción** |
| --- | --- |
| Flecha hacia arriba [^] | Saltar |
| Flecha hacia abajo [v] | Bajar |


## Reglas

Se comienza con `5 vidas`. En caso de topar a un perro se pierde una vida. Y en caso de perder todas las vidas pierdes. De igual forma con las preguntas aparecerán 2 opciones, la opción correcta muestra el camino por donde continua el juego. Si te equivocas de camino, pierdes inevitablemente y vuelves al inicio.  

## Elementos del juego

### Pantalla de inicio

![](/img/pantalla-inicio.png)

En la pantalla de inicio se muestra el nombre del juego, el logo, un botón para iniciar el juego y otro para ver las reglas.

### Elementos de interacción
// Tabla izquierda imagen, derecha texto

| Imagen | **Elementos de interacción** |
| --- | --- |
| <div align="center"> ![](/img/gat.png)</div> | El es el personaje principal del juego, el cual se mueve por la pantalla. Va a huir de los obstáculos. |
| <div align="center"> ![](/img/DogRun.png) </div> | El es el villano del juego, debes evitar encontrarlo durante el camino. |
| <div align="center"> ![](/img/pilaCaja.png) </div> | Se muestra el resultado obtenido luego del proceso de ideacion, desarrollo y testing de la idea inicial A continuacion el manual final y los ultimos cambios. |
| <div align="center"> ![](/img/pared.png) </div> | Representa el camino de cat, en ciertos puentos el camino desaparece recuerda saltar para no morir. |

